--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                 <img src="./images/search.png" alt="" class="search-img">
             </div>
         </div>
+        <div class="error">
+            <p>Nombre de ciudad inválida</p>
+        </div>
         <div class="weather-container">
             <div class="weather-img">
                 <img id="weather-icon">
